@@ -16,24 +16,13 @@
 
 package com.jayway.restassured.mapper.resolver;
 
+import static com.jayway.restassured.internal.classpath.ClassPathResolver.existInCP;
+
 public class ObjectMapperResolver {
     private static final boolean isJackson1Present = existInCP("org.codehaus.jackson.map.ObjectMapper") && existInCP("org.codehaus.jackson.JsonGenerator");
     private static final boolean isJackson2Present = existInCP("com.fasterxml.jackson.databind.ObjectMapper") && existInCP("com.fasterxml.jackson.core.JsonGenerator");
     private static final boolean isJaxbPresent = existInCP("javax.xml.bind.Binder");
     private static final boolean isGsonPresent = existInCP("com.google.gson.Gson");
-
-    private static boolean existInCP(String className) {
-        return existsInCP(className, ObjectMapperResolver.class.getClassLoader()) || existsInCP(className, Thread.currentThread().getContextClassLoader());
-    }
-
-    private static boolean existsInCP(String className, ClassLoader classLoader) {
-        try {
-            Class.forName(className, false, classLoader);
-            return true;
-        } catch (Throwable e) {
-            return false;
-        }
-    }
 
     public static boolean isJackson1InClassPath() {
         return isJackson1Present;
