@@ -17,7 +17,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <properties>
-        <httpclient.version>4.3.6</httpclient.version>
+        <httpclient.version>4.5.1</httpclient.version>
     </properties>
     <parent>
         <groupId>com.jayway.restassured</groupId>
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpmime</artifactId>
-            <version>${httpclient.version}</version>
+            <version>4.5.1</version>
         </dependency>
         <dependency>
             <groupId>org.scribe</groupId>
